Added semi-working cursor, and separated rendering from menu manager